--- a/css/style.css
+++ b/css/style.css
@@ -1208,9 +1208,9 @@ max-width: 586px;
 
 /* desktop */
 @media screen and (min-width: 1200px) {
-  .hero {
+  /* .hero {
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)) ,url(../images/people-office.jpg);
-  }
+  } */
   @media (min-device-pixel-ratio: 1),
   (min-resolution: 86dpi),
   (min-resolution: 1dppx) {
